# soff

./: .gitignore  CODEMAP.md  README.md  README_CN.md  codemap.md  ida-plugin.json  project.md  xmake.lua
.github/workflows/: ci.yml
desktop/: index.html  package.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: db.rs  lib.rs  main.rs
desktop/src/components/: AnalyzeView.tsx  CfgView.tsx  DiffPage.tsx  DiffViewer.tsx  EmptyState.tsx  MatchTable.tsx  Sidebar.tsx  StatsPanel.tsx  Toolbar.tsx
docs/: api.md  rewrite-plan.md
img/: .gitkeep
include/soff/analysis/: model.hpp
include/soff/core/: config.hpp  error.hpp  hooks.hpp  thread_pool.hpp  version.hpp
include/soff/db/: schema.hpp  (+3 more)
scripts/: generate_ratio_parity.py  install-plugin.ps1
src/analysis/: model.cpp
src/cli/: main.cpp
src/core/: version.cpp
src/db/: database.cpp  repository.cpp  result_repository.cpp  schema.cpp
src/diff/: bb_matching.cpp  heuristics.cpp  matcher.cpp  ml_features.cpp  ml_model.cpp  patch_diff.cpp  propagation.cpp  ratio.cpp  session.cpp  sql_runner.cpp
src/export/: exporter.cpp  parallel_features.cpp
src/ffi/: soff_ffi.cpp  soff_ffi.h
src/ida/: adapter.cpp
src/plugin/: soff_plugin.cpp
src/ui/: actions.cpp  html_diff.cpp  import_plan.cpp  line_diff.cpp
tests/: smoke.cpp  test_line_diff.cpp
tests/fixtures/: m4_real_export_calibration.json  m5_native_fields_reexport_calibration.json  m5_real_export_calibration.json  m5_two_file_diff_calibration.json  manifest.json  ratio_parity.json
(+17 files in other folders)
