[package]
name = "soff-desktop"
version = "0.1.0"
description = "Soff Binary Diff Desktop"
authors = ["you"]
edition = "2021"

[lib]
name = "soff_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
similar = "2"

